# MBCoopServer

./: CMakeLists.txt  MBCoopServer.sln  Setup.ps1
MBCoopServer/MBCoopServer/: CMakeLists.txt
MBCoopServer/MBCoopServer/Project/: MBCoopServer.vcxproj  MBCoopServer.vcxproj.filters
MBCoopServer/MBCoopServer/Source/: MBCoopServer.cpp
Projects/: CMakeLists.txt
Projects/HttpClient/: CMakeLists.txt
Projects/HttpClient/Include/: connection.hpp  server.hpp
Projects/HttpClient/Source/: connection.cpp  request_handler.cpp  server.cpp
Projects/MBClient/: CMakeLists.txt  precompiled.cpp
Projects/MBClient/Include/: mbcp_client_data_handler.hpp
Projects/MBClient/Source/: mbcp_client.cpp  mbcp_client_data_handler.cpp
Projects/MBConnectionPlugin/: CMakeLists.txt
Projects/MBConnectionPlugin/Include/: mbcp_connection_interface.hpp  mbcp_data_handler_interface.hpp  mbcp_http_connection.hpp  mbcp_udp_connection.hpp
Projects/MBConnectionPlugin/Source/: mbcp_http_connection.cpp  mbcp_udp_connection.cpp
Projects/MBConnectionPluginTests/: CMakeLists.txt  main.cpp
Projects/MBConnectionPluginTests/Tests/: mbcp_http_connection_test.hpp
Projects/MBCoopServer/: CMakeLists.txt  precompiled.hpp
Projects/MBCoopServer/Include/: mbcp_data_parser.hpp  mbcp_request_handler.hpp
Projects/MBCoopServer/Source/: mbcp_data_parser.cpp  mbcp_request_handler.cpp
Projects/MBCoopServer/Source/HttpServer/: connection.cpp  connection.hpp
Projects/MBServer/: CMakeLists.txt  precompiled.hpp
Projects/MBServer/Include/: mbcp_data_parser.hpp  mbcp_server_data_handler.hpp
Projects/MBServer/Source/: mbcp_main_server.cpp  mbcp_server_data_handler.cpp
Projects/MBTestClient/: CMakeLists.txt  precompiled.hpp
Projects/MBTestClient/Source/: mbcp_client_test.cpp
Projects/UDPClient/: CMakeLists.txt
Projects/UDPClient/Include/: Server.hpp
Tools/: install_nuget.py  packages.config
